# bank_statement_parser

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DCO  LICENSE  README.md  RELEASE.md  SECURITY.md  TESTING.md  VISION.md  latest  mkdocs.yml  pyproject.toml  versions.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  new-bank-request.yml  parsing-issue.yml
.github/test-submissions/: README.md  anonymised_halifax_current_2019-08-31.json  anonymised_halifax_current_2022-01-31.json  anonymised_halifax_current_2024-03-31.json  anonymised_halifax_current_2026-03-31.json  anonymised_natwest_current_22-08-2025.json  anonymised_natwest_current_23-01-2026.json  anonymised_natwest_current_24-08-2019.json  anonymised_natwest_current_24-12-2025.json
.github/workflows/: ci.yml  dco.yml  docs.yml  promote-release.yml  release.yml
0.2.1rc11/: 404.html  index.html  sitemap.xml
0.2.1rc11/guides/anonymisation/: index.html
0.2.1rc11/guides/contributing-new-bank/: index.html
0.2.1rc11/guides/exports/: index.html
0.2.1rc11/guides/local-testing/: index.html
0.2.1rc11/guides/new-bank-config/: index.html
0.2.1rc11/guides/project-structure/: index.html
0.2.1rc11/guides/quick-start/: index.html
0.2.1rc11/guides/test-data-submission/: index.html
0.2.1rc11/reference/cli/: index.html
0.2.1rc11/reference/python-api/: index.html
0.2.1rc12/: 404.html  index.html  sitemap.xml
0.2.1rc12/guides/anonymisation/: index.html
0.2.1rc12/guides/contributing-new-bank/: index.html
0.2.1rc12/guides/exports/: index.html
0.2.1rc12/guides/local-testing/: index.html
0.2.1rc12/guides/new-bank-config/: index.html
0.2.1rc12/guides/project-structure/: index.html
0.2.1rc12/guides/quick-start/: index.html
0.2.1rc12/guides/test-data-submission/: index.html
0.2.1rc12/reference/cli/: index.html
0.2.1rc12/reference/python-api/: index.html
0.2.1rc13/: 404.html  index.html  sitemap.xml
0.2.1rc13/guides/anonymisation/: index.html
0.2.1rc13/guides/contributing-new-bank/: index.html
0.2.1rc13/guides/exports/: index.html
0.2.1rc13/guides/local-testing/: index.html
0.2.1rc13/guides/new-bank-config/: index.html
0.2.1rc13/guides/project-structure/: index.html
0.2.1rc13/guides/quick-start/: index.html
0.2.1rc13/guides/test-data-submission/: index.html
0.2.1rc13/reference/cli/: index.html
0.2.1rc13/reference/python-api/: index.html
0.2.1rc5/: 404.html  index.html  sitemap.xml
0.2.1rc5/CONTRIBUTING/: index.html
0.2.1rc5/guides/anonymisation/: index.html
0.2.1rc5/guides/contributing-new-bank/: index.html
0.2.1rc5/guides/exports/: index.html
0.2.1rc5/guides/local-testing/: index.html
0.2.1rc5/guides/new-bank-config/: index.html
0.2.1rc5/guides/project-structure/: index.html
0.2.1rc5/guides/quick-start/: index.html
0.2.1rc5/reference/cli/: index.html
0.2.1rc5/search/: search_index.json
0.3.1/: 404.html  index.html  sitemap.xml
0.3.1/changelog/: index.html
0.3.2/: 404.html  index.html  sitemap.xml
0.3.2.post1/: 404.html  index.html  sitemap.xml
0.3.2.post1/changelog/: index.html
0.3.2.post1/search/: search_index.json
0.3.2/changelog/: index.html
0.3.2/search/: search_index.json
0.3.3/: 404.html  index.html  sitemap.xml
0.3.3/changelog/: index.html
0.3.5/: 404.html  index.html  sitemap.xml
0.3.6/: 404.html  index.html  sitemap.xml
0.3.6/search/: search_index.json
0.3.7/: 404.html  index.html  sitemap.xml
changes/: 121.internal  122.internal  123.internal  124.internal  125.bugfix  126.internal  127.internal  128.internal  135.internal  136.internal  _template.md.jinja
data/: create_project_db.py  project.db
docs/: index.md
docs/guides/: anonymisation.md  burnout-prevention.md  contributing-new-bank.md  exports.md  github-discussions-setup.md  local-testing.md  new-bank-config.md  project-structure.md  quick-start.md  test-data-submission.md
docs/reference/: cli.md  python-api.md
examples/mssql/: dbo.account.Table.sql  dbo.balances.Table.sql  dbo.calendar.Table.sql  dbo.calendar_statement.Table.sql  dbo.code.Table.sql  dbo.code_group.Table.sql  dbo.coded_transactions.Table.sql  dbo.gaps.Table.sql  dbo.get_transaction_codes.StoredProcedure.sql  dbo.statement.Table.sql  dbo.transactions.Table.sql  dbo.vwTransactions.View.sql  tmp.Schema.sql
hooks/: prepare-commit-msg
scripts/: generate_docs.py  generate_supported_banks.py  generate_test_metadata.py
src/bank_statement_parser/: __init__.py  __main__.py  cli.py  dev.py  polars_test  profile.html  profile.json  test.py  test_polars  testing.py
src/config/: __init__.py  account.toml  account_type.toml  account_types.toml  accounts.toml  banks.toml  companies.toml  company.toml  data_definitions.py  spec_statements.toml  statement_regions.toml  statement_tables.toml  statement_types.toml  transaction.toml
src/user_config/: statement_old.toml
tests/: conftest.py  test_cli.py  test_datamart.py  test_docs.py  test_export_spec.py  test_forex.py  test_regex_groups.py  test_statements.py
v0.2.1rc10/: 404.html  index.html  sitemap.xml
v0.2.1rc11/: 404.html  index.html  sitemap.xml
v0.2.1rc12/: 404.html  index.html  sitemap.xml
(+199 files in other folders)
