[project]
name = "bank-statement-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jason Farrar", email = "farrar.jason1@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dacite>=1.9.2",
    "pdfplumber>=0.11.9",
    "polars>=1.36.1",
    "pymupdf>=1.27.1",
    "xlsxwriter>=3.2.9",
]

[project.scripts]
bsp = "bank_statement_parser.cli:main"
bsp-dev = "bank_statement_parser:dev.main"

[build-system]
requires = ["uv_build>=0.9.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "memory-profiler>=0.61.0",
    "pikepdf>=10.3.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
    "scalene>=2.0.1",
]

[tool.ruff]
line-length = 140
target-version = "py310"
unfixable = ["F401"]
