[project]
name = "uk-bank-statement-parser"
version = "0.2.0a3"
description = "Parse bank statement PDFs, extract transactions, and persist to Parquet and SQLite."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jason Farrar", email = "farrar.jason1@gmail.com" }
]
requires-python = ">=3.11"
keywords = ["bank-statement", "pdf", "parser", "transactions", "polars", "sqlite", "parquet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "dacite>=1.9.2",
    "pdfplumber>=0.11.9",
    "pikepdf>=10.3.0",
    "polars>=1.36.1",
    "xlsxwriter>=3.2.9",
]

[project.scripts]
bsp = "bank_statement_parser.cli:main"
bsp-dev = "bank_statement_parser:dev.main"

[project.urls]
Homepage = "https://github.com/boscorat/bank_statement_parser"
Repository = "https://github.com/boscorat/bank_statement_parser"
Issues = "https://github.com/boscorat/bank_statement_parser/issues"

[build-system]
requires = ["uv_build>=0.9.8,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "bank_statement_parser"

[dependency-groups]
dev = [
    "memory-profiler>=0.61.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
    "scalene>=2.0.1",
]

[tool.ruff]
line-length = 140
target-version = "py311"
lint.unfixable = ["F401"]
