[project]
name = "uk-bank-statement-parser"
version = "0.3.6"
description = "Parse bank statement PDFs, extract transactions, and persist to Parquet and SQLite."
readme = "README.md"
license = "LGPL-3.0-or-later"
authors = [
    { name = "Jason Farrar", email = "farrar.jason1@gmail.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
    "Topic :: Text Processing :: Markup",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

keywords = [
  "bank-statement", "pdf", "parser", "uk", "finance", "bank statement",
  "hsbc", "natwest", "tsb", "halifax", "toml"
]

dependencies = [
    "dacite>=1.9.2",
    "pdfplumber>=0.11.9",
    "polars>=1.36.1",
    "xlsxwriter>=3.2.9",
]

[project.optional-dependencies]
anonymise = ["uk-bank-statement-anonymiser>=0.1.0; python_version >= '3.11'"]

[project.scripts]
bsp = "bank_statement_parser.cli:main"
bsp-dev = "bank_statement_parser:dev.main"

[project.urls]
Homepage = "https://boscorat.github.io/bank_statement_parser/latest"
Documentation = "https://boscorat.github.io/bank_statement_parser/latest"
Repository = "https://github.com/boscorat/bank_statement_parser"
"Bug Tracker" = "https://github.com/boscorat/bank_statement_parser/issues"
Releases = "https://github.com/boscorat/bank_statement_parser/releases"


[build-system]
requires = ["uv_build>=0.9.8,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "bank_statement_parser"
include = ["bank_statement_parser/test_data/**"]

[dependency-groups]
dev = [
    "memory-profiler>=0.61.0",
    "zensical>=0.0.24",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
    "scalene>=2.0.1",
    "mike>=2.0.0",
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=10.0.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::ResourceWarning:sqlite3",
]

[tool.ruff]
line-length = 140
target-version = "py311"
lint.ignore = ["E402"]  # Module-level imports intentionally organized by section with comments
lint.unfixable = ["F401"]


